core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@multi_traits.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Implementing multiple traits currently unsupported
In src/ast/snapshots/span_testing/multi_traits.rs:3:41:
...() + FnMut()) {}...
        ^^^^^^^
Suggestion: remove extra trait bound
